Upgrade to Blaze 0.14.0-M3 + replace Jackson by jsoniter-scala