@@ -3,8 +3,8 @@
 ## Infrastructure Software Versions
 The tests were run with:
 
-* [Java Oracle 1.8.0_101](http://www.oracle.com/technetwork/java/javase)
-* [blaze 0.13.0](https://github.com/http4s/blaze/)
+* [Java Oracle 1.8.0](http://www.oracle.com/technetwork/java/javase)
+* [blaze 0.14.0-M3](https://github.com/http4s/blaze/)
 
 ## Test URLs
 ### JSON Encoding Test
@@ -16,6 +16,7 @@ http://localhost:8080/json
 http://localhost:8080/plaintext
 
 ## How to run
-sbt 'oneJar'
+sbt assembly
 
-java -jar target/scala-2.11/blaze_2.11-1.0-SNAPSHOT-one-jar.jar
+java -server -Xms2g -Xmx2g -XX:NewSize=1g -XX:MaxNewSize=1g -XX:InitialCodeCacheSize=256m -XX:ReservedCodeCacheSize=256m -XX:+UseParallelGC -XX:-UseBiasedLocking -XX:+AlwaysPreTouch -jar target/scala-2.12/blaze-assembly-1.0.jar
+
